--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Run tests with coverage
         run: pytest --cov=typepigeon --numprocesses auto
       - name: Upload coverage to Codecov
-        if: matrix.python-version == 3.9
+        if: matrix.python-version == 3.x
         uses: codecov/codecov-action@v1
         with:
           flags: python${{ matrix.python-version }}-${{ runner.os }}
