--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [ 3.6, 3.x ]
+        python-version: [ '3.6', '3.x' ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
       - name: Run tests with coverage
         run: pytest --cov=typepigeon --numprocesses auto
       - name: Upload coverage to Codecov
-        if: matrix.python-version == 3.x
+        if: matrix.python-version == '3.x'
         uses: codecov/codecov-action@v1
         with:
           flags: python${{ matrix.python-version }}-${{ runner.os }}
