--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,5 +47,6 @@ jobs:
         uses: codecov/codecov-action@v2.1.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          flags: python${{ matrix.python-version }}-${{ runner.os }}
+          files: .coverage
           fail_ci_if_error: true
+          verbose: true
