--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ windows-latest, ubuntu-latest ]
         python-version: [ '3.6', '3.x' ]
     steps:
       - name: Checkout repository
@@ -26,9 +26,6 @@ jobs:
           restore-keys: ${{ runner.os }}-pip-${{ matrix.python-version }}-
       - name: Install wheel
         run: pip install wheel
-      - name: Run setup.py on Windows
-        if: contains(matrix.os, 'windows')
-        run: python setup.py install
       - name: Install dependencies
         run: |
           pip install wheel
