--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,8 @@ author = Zach Burnett
 author_email = zachary.r.burnett@gmail.com
 description = Python type converter
 long_description = file: README.md
-license = IT
+long_description_content_type = 'text/markdown'
+license = MIT
 url = https://typepigeon.readthedocs.io
 
 [tool:pytest]
