--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ sphinx-rtd-theme = { version = "*", optional = true }
 requires = [
     "dunamai",
     "setuptools",
+    "toml",
 ]
 build-backend = "setuptools.build_meta"
 
