--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "typepigeon"
 version = "0.0.0"
 description = "Python type converter"
 authors = [
-    "Zach Burnett <zachary.r.burnett@gmail.com>"
+    { name = "Zach Burnett", email = "zachary.r.burnett@gmail.com" },
 ]
 license = "MIT"
 readme = "README.md"
@@ -12,31 +12,19 @@ homepage = "https://typepigeon.readthedocs.io"
 repository = "https://github.com/zacharyburnett/TypePigeon"
 documentation = "https://typepigeon.readthedocs.io"
 
-[dependencies]
-python-dateutil = "*"
-pyproj = { version = "*", optional = true }
-shapely = { version = "*", optional = true }
+[project.dependencies]
+python-dateutil = '*'
+pyproj = '*'
+shapely = '*'
 
-[dev-dependencies]
-pytest = { version = "*", optional = true }
-pytest-cov = { version = "*", optional = true }
-pytest-xdist = { version = "*", optional = true }
-flake8 = { version = "*", optional = true }
-isort = { version = "*", optional = true }
-oitnb = { version = "*", optional = true }
-m2r2 = { version = "*", optional = true }
-sphinx = { version = "*", optional = true }
-sphinx-rtd-theme = { version = "*", optional = true }
+[project.optional-dependencies]
+testing = ['pytest', 'pytest-cov', 'pytest-xdist']
+development = ['flake8', 'isort', 'oitnb']
+documentation = ['m2r2', 'sphinx', 'sphinx-rtd-theme']
 
 [build-system]
 requires = [
     "dunamai",
     "setuptools",
-    "toml",
 ]
 build-backend = "setuptools.build_meta"
-
-[tool.poetry.extras]
-testing = ['pytest', 'pytest-cov', 'pytest-xdist']
-development = ['flake8', 'isort', 'oitnb']
-documentation = ['m2r2', 'sphinx', 'sphinx-rtd-theme']
