--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: install dependencies
         run: pip install --upgrade pip setuptools wheel
       - name: build wheel
-        run: pip wheel . -w dist
+        run: pip wheel . -w dist --no-deps
       - name: save wheel
         uses: actions/upload-artifact@v2
         with:
