--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.local
-          key: ${{ runner.os }}-python${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}
+          key: ${{ runner.os }}-python${{ matrix.python-version }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
           restore-keys: ${{ runner.os }}-python${{ matrix.python-version }}-
       - name: install dependencies
         run: |
@@ -39,7 +39,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python-version: [ '3.7', '3.x' ]
+        python-version: [ '3.6', '3.x' ]
     steps:
       - name: clone repository
         uses: actions/checkout@v2
@@ -51,7 +51,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.local
-          key: ${{ runner.os }}-python${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('setup.py') }}
+          key: ${{ runner.os }}-python${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
           restore-keys: ${{ runner.os }}-python${{ matrix.python-version }}-
       - name: install `pipwin` on Windows
         if: contains(matrix.os, 'windows')
