--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: restore cached dependencies
+      - name: load cached `~/.local`
         uses: actions/cache@v2
         with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
-          restore-keys: ${{ runner.os }}-pip-${{ steps.setup-python.outputs.python-version }}-
-      - name: install dependencies
-        run: pip install --upgrade pip setuptools wheel
+          path: ~/.local
+          key: ${{ runner.os }}-python${{ matrix.python-version }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
+          restore-keys: ${{ runner.os }}-python${{ matrix.python-version }}-
       - name: build wheel
         run: pip wheel . -w dist --no-deps
       - name: save wheel
@@ -38,11 +36,23 @@ jobs:
   build_sdist:
     name: package source
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        python-version: [ '3.x' ]
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
       - name: install Python
         uses: actions/setup-python@v2
+      - name: load cached `~/.local`
+        uses: actions/cache@v2
+        with:
+          path: ~/.local
+          key: ${{ runner.os }}-python${{ matrix.python-version }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
+          restore-keys: ${{ runner.os }}-python${{ matrix.python-version }}-
+      - name: install dependencies
+        run: pip install .
       - name: package source
         run: python setup.py sdist
       - name: save source package
