--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Python type converter
 long_description = file:README.md
 long_description_content_type = text/markdown
 license = MIT
-python = ^3.6
+python = >=3.6
 url = https://typepigeon.readthedocs.io
 
 [options]
