--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,13 @@ description = Python type converter
 long_description = file:README.md
 long_description_content_type = text/markdown
 license = MIT
-python = >=3.6
 url = https://typepigeon.readthedocs.io
 
 [options]
 install_requires =
-    python-dateutil
     pyproj
+    python>=3.6
+    python-dateutil
     shapely
 
 [options.extras_require]
