--- a/setup.cfg
+++ b/setup.cfg
@@ -5,12 +5,12 @@ description = Python type converter
 long_description = file:README.md
 long_description_content_type = text/markdown
 license = MIT
+python_requires = >=3.6
 url = https://typepigeon.readthedocs.io
 
 [options]
 install_requires =
     pyproj
-    python>=3.6
     python-dateutil
     shapely
 
