make install leaner

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,11 +10,13 @@ url = https://typepigeon.readthedocs.io
 
 [options]
 install_requires =
-    pyproj
     python-dateutil
-    shapely
+    importlib_metadata
 
 [options.extras_require]
+spatial =
+    pyproj
+    shapely
 testing =
     pytest
     pytest-cov
