--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,13 +19,13 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-  test:
+  test_without_spatial:
     needs: lint
-    name: test
+    name: test without spatial conversions
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
+        os: [ windows-latest, macos-latest ]
         python-version: [ '3.6', '3.x' ]
     steps:
       - name: clone repository
@@ -44,13 +44,38 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: pip install ".[testing]"
       - name: run tests
-        if: matrix.python-version != '3.x' || matrix.os != 'ubuntu-latest'
+        run: pytest --numprocesses auto -m "not spatial"
+  test_spatial:
+    needs: lint
+    name: test with spatial conversions
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ '3.6', '3.x' ]
+    steps:
+      - name: clone repository
+        uses: actions/checkout@v2
+      - name: install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: load cached Python installation
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
+      - name: install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: pip install ".[testing,spatial]"
+      - name: run tests
+        if: matrix.python-version != '3.x'
         run: pytest --numprocesses auto
       - name: run tests with coverage
-        if: matrix.python-version == '3.x' && matrix.os == 'ubuntu-latest'
+        if: matrix.python-version == '3.x'
         run: pytest --numprocesses auto --cov . --cov-report xml:coverage.xml
       - name: upload coverage to Codecov
-        if: matrix.python-version == '3.x' && matrix.os == 'ubuntu-latest'
+        if: matrix.python-version == '3.x'
         uses: codecov/codecov-action@v2.1.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
