--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ author = Zach Burnett <zachary.r.burnett@gmail.com>
 description = Python type converter
 long_description = file:README.md
 long_description_content_type = text/markdown
-license = MIT
+license = GPLv3
 python_requires = >=3.6
 url = https://typepigeon.readthedocs.io
 
