--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,8 +33,11 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, macos-latest ]
-        python-version: [ '3.6', '3.x' ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
+        exclude:
+          - os: macos-latest
+            python-version: '3.x'
     steps:
       - name: clone repository
         uses: actions/checkout@v2
@@ -53,12 +56,13 @@ jobs:
       - name: run tests
         run: pytest --numprocesses auto -m "not spatial"
   test_spatial:
-    needs: lint
+    needs: [ lint, test_without_spatial ]
     name: test with spatial conversions
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.6', '3.x' ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
     steps:
       - name: clone repository
         uses: actions/checkout@v2
