--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -60,6 +60,9 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
+        exclude:
+          - os: macos-latest
+            python-version: '3.x'
     steps:
       - name: clone repository
         uses: actions/checkout@v2
