--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,22 +11,30 @@ jobs:
         uses: actions/checkout@v2
       - name: install Python
         uses: actions/setup-python@v2
-      - name: install flake8
-        run: pip install flake8
+      - name: load cached Python installation
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: lint-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+      - name: install linters
+        run: pip install flake8 oitnb
       - name: lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-  test_without_spatial:
+      - name: lint with oitnb
+        run: oitnb . --check
+  test_nonspatial:
     needs: lint
-    name: test without spatial conversions
+    name: test non-spatial conversions
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ windows-latest, macos-latest ]
-        python-version: [ '3.6', '3.x' ]
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
     steps:
       - name: clone repository
         uses: actions/checkout@v2
@@ -39,19 +47,22 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
-          key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
+          key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
       - name: install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: pip install ".[testing]"
       - name: run tests
         run: pytest --numprocesses auto -m "not spatial"
   test_spatial:
-    needs: lint
-    name: test with spatial conversions
-    runs-on: ubuntu-latest
+    needs: [ lint ]
+    name: test spatial conversions
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ '3.6', '3.x' ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
+        exclude:
+          - os: macos-latest
+            python-version: '3.x'
     steps:
       - name: clone repository
         uses: actions/checkout@v2
@@ -64,18 +75,31 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
-          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
+          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
       - name: install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: pip install ".[testing,spatial]"
       - name: run tests
-        if: matrix.python-version != '3.x'
-        run: pytest --numprocesses auto
+        run: pytest --numprocesses auto -m "spatial"
+  test_with_coverage:
+    needs: [ lint, test_nonspatial, test_spatial ]
+    name: test with coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: clone repository
+        uses: actions/checkout@v2
+      - name: install Python
+        uses: actions/setup-python@v2
+      - name: load cached Python installation
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+      - name: install dependencies
+        run: pip install ".[testing,spatial]"
       - name: run tests with coverage
-        if: matrix.python-version == '3.x'
         run: pytest --numprocesses auto --cov . --cov-report xml:coverage.xml
       - name: upload coverage to Codecov
-        if: matrix.python-version == '3.x'
         uses: codecov/codecov-action@v2.1.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
