--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,43 @@
+[tool.poetry]
+name = 'typepigeon'
+version = '0.0.0'
+description = 'Python type converter'
+authors = ['Zach Burnett <zachary.r.burnett@gmail.com>']
+license = 'GPL-3.0-or-later'
+readme = 'README.md'
+repository = 'https://github.com/zacharyburnett/TypePigeon.git'
+documentation = 'https://typepigeon.readthedocs.io'
+
 [build-system]
 requires = [
-    "dunamai",
-    "setuptools >=41.2",
+    'poetry-core>=1.0.0',
+    'poetry-dynamic-versioning',
 ]
-build-backend = "setuptools.build_meta"
+build-backend = 'poetry.core.masonry.api'
+
+[tool.poetry-dynamic-versioning]
+enable = true
+
+[tool.poetry.dependencies]
+python = '^3.6'
+python-dateutil = '*'
+importlib_metadata = '*'
+pyproj = { version = '*', optional = true }
+shapely = { version = '*', optional = true }
+isort = { version = '*', optional = true }
+oitnb = { version = '*', optional = true }
+pytest = { version = '*', optional = true }
+pytest-cov = { version = '*', optional = true }
+pytest-xdist = { version = '*', optional = true }
+m2r2 = { version = '*', optional = true }
+sphinx = { version = '*', optional = true }
+sphinx-rtd-theme = { version = '*', optional = true }
+
+[tool.poetry.extras]
+spatial = ['pyproj', 'shapely']
+testing = ['pytest', 'pytest-cov', 'pytest-xdist']
+development = ['isort', 'oitnb']
+documentation = ['m2r2', 'sphinx', 'sphinx-rtd-theme']
+
+[tool.pytest.ini_options]
+markers = ['spatial']
