--- a/.github/workflows/tests_simple.yml
+++ b/.github/workflows/tests_simple.yml
@@ -27,9 +27,28 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: lint with oitnb
         run: oitnb . --check
-  test:
-    needs: [ lint ]
-    name: test
+  test_nonspatial:
+    needs: lint
+    name: test non-spatial conversions
+    runs-on: ubuntu-latest
+    steps:
+      - name: clone repository
+        uses: actions/checkout@v2
+      - name: install Python
+        uses: actions/setup-python@v2
+      - name: load cached Python installation
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+      - name: install dependencies
+        run: pip install ".[testing]"
+      - name: run tests
+        run: pytest --numprocesses auto -m "not spatial"
+  test_spatial:
+    needs: lint
+    name: test spatial conversions
     runs-on: ubuntu-latest
     steps:
       - name: clone repository
@@ -45,4 +64,4 @@ jobs:
       - name: install dependencies
         run: pip install ".[testing,spatial]"
       - name: run tests
-        run: pytest --numprocesses auto
+        run: pytest --numprocesses auto -m "spatial"
