--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,8 +3,10 @@ name: tests
 on:
   push:
     branches:
-      - main
+      - 'main'
   pull_request:
+    branches:
+      - 'main'
 
 jobs:
   lint:
