--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,9 @@ jobs:
     name: publish package to PyPI
     runs-on: ubuntu-latest
     steps:
-      - name: Publish python poetry package
+      - name: checkout repository
+        uses: actions/checkout@v2
+      - name: build package and publish to PyPI
         uses: JRubics/poetry-publish@v1
         with:
           pypi_token: ${{ secrets.PYPI_TOKEN }}
