--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,11 @@ jobs:
         uses: actions/checkout@v2
       - name: install Poetry
         uses: abatilo/actions-poetry@v2.1.3
+      - name: install Dunamai
+        run: pip install dunamai
+      - name: extract version from VCS
+        run: poetry version $(dunamai from any)
       - name: build wheel and source
         run: poetry build
       - name: upload wheel and source
-        uses: pypa/gh-action-pypi-publish@v1.5.0
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
+        run: poetry publish --username __token__ --password ${{ secrets.PYPI_TOKEN }}
