--- a/.github/workflows/quick_test.yml
+++ b/.github/workflows/quick_test.yml
@@ -1,4 +1,4 @@
-name: tests
+name: quick test
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
     paths:
       - '**.py'
       - '.github/workflows/tests_simple.yml'
+      - 'pyproject.toml'
 
 jobs:
   lint:
@@ -33,9 +34,9 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: lint with oitnb
         run: oitnb . --check
-  test_nonspatial:
+  test:
     needs: lint
-    name: test non-spatial conversions
+    name: quick test
     runs-on: ubuntu-latest
     steps:
       - name: clone repository
@@ -51,23 +52,4 @@ jobs:
       - name: install dependencies
         run: pip install ".[testing]"
       - name: run tests
-        run: pytest --numprocesses auto -m "not spatial"
-  test_spatial:
-    needs: lint
-    name: test spatial conversions
-    runs-on: ubuntu-latest
-    steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
-      - name: load cached Python installation
-        id: cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ env.pythonLocation }}
-          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install dependencies
-        run: pip install ".[testing,spatial]"
-      - name: run tests
-        run: pytest --numprocesses auto -m "spatial"
+        run: pytest --numprocesses auto
