--- a/.github/workflows/quick_test.yml
+++ b/.github/workflows/quick_test.yml
@@ -14,42 +14,35 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
-      - name: load cached Python installation
+      - uses: actions/checkout@main
+      - uses: actions/setup-python@main
+        with:
+          python-version: '3.x'
+      - uses: actions/cache@main
         id: cache
-        uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
           key: lint-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install linters
-        run: pip install flake8 oitnb
-      - name: lint with flake8
-        run: |
+      - run: pip install flake8 oitnb
+      - run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: lint with oitnb
-        run: oitnb . --check
+      - run: oitnb . --check
   test:
     needs: lint
     name: quick test
     runs-on: ubuntu-latest
     steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
-      - name: load cached Python installation
+      - uses: actions/checkout@main
+      - uses: actions/setup-python@main
+        with:
+          python-version: '3.x'
+      - uses: actions/cache@main
         id: cache
-        uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
           key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install dependencies
-        run: pip install ".[testing]"
-      - name: run tests
-        run: pytest --numprocesses auto
+      - run: pip install ".[testing]"
+      - run: pytest -n auto
