--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,102 +17,83 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
-      - name: load cached Python installation
+      - uses: actions/checkout@main
+      - uses: actions/setup-python@main
+        with:
+          python-version: '3.x'
+      - uses: actions/cache@main
         id: cache
-        uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
           key: lint-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install linters
-        run: pip install flake8 oitnb
-      - name: lint with flake8
-        run: |
+      - run: pip install flake8 oitnb
+      - run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: lint with oitnb
-        run: oitnb . --check
+      - run: oitnb . --check
   test_nonspatial:
-    needs: lint
+    needs: [ lint ]
     name: test non-spatial conversions
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
+        python: [ '3.6', '3.7', '3.8', '3.9', '3.10' ]
     steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@main
+      - uses: actions/setup-python@main
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: load cached Python installation
+          python-version: ${{ matrix.python }}
+      - uses: actions/cache@main
         id: cache
-        uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
           key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install dependencies
-        run: pip install ".[testing]"
-      - name: run tests
-        run: pytest --numprocesses auto -m "not spatial"
+      - run: pip install ".[testing]"
+      - run: pytest -n auto -m "not spatial"
   test_spatial:
-    needs: lint
+    needs: [ lint ]
     name: test spatial conversions
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ '3.6', '3.7', '3.8', '3.9', '3.x' ]
+        os: [ ubuntu-latest ]
+        python: [ '3.6', '3.7', '3.8', '3.9', '3.10' ]
         exclude:
           - os: macos-latest
-            python-version: '3.x'
+            python-version: '3.10'
     steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@main
+      - uses: actions/setup-python@main
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: load cached Python installation
+          python-version: ${{ matrix.python }}
+      - uses: actions/cache@main
         id: cache
-        uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
-          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install dependencies
-        run: pip install ".[testing,spatial]"
-      - name: run tests
-        run: pytest --numprocesses auto -m "spatial"
+          key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+      - run: pip install ".[testing,spatial]"
+      - run: pytest -n auto -m "spatial"
   test_with_coverage:
     needs: [ lint, test_nonspatial, test_spatial ]
     name: test with coverage
     runs-on: ubuntu-latest
     steps:
-      - name: clone repository
-        uses: actions/checkout@v2
-      - name: install Python
-        uses: actions/setup-python@v2
-      - name: load cached Python installation
+      - uses: actions/checkout@main
+      - uses: actions/setup-python@main
+        with:
+          python-version: '3.10'
+      - uses: actions/cache@main
         id: cache
-        uses: actions/cache@v2
         with:
           path: ${{ env.pythonLocation }}
-          key: test-spatial-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
-      - name: install dependencies
-        run: pip install ".[testing,spatial]"
-      - name: run tests with coverage
-        run: pytest --numprocesses auto --cov . --cov-report xml:coverage.xml
-      - name: show coverage report
-        run: coverage report
-      - name: upload coverage to Codecov
-        uses: codecov/codecov-action@v2.1.0
+          key: test-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+      - run: pip install ".[testing,spatial]"
+      - run: pytest --cov . --cov-report xml:coverage.xml
+      - run: coverage report
+      - uses: codecov/codecov-action@master
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: coverage.xml
