--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-python@main
         with:
-          python-version: '3.x'
+          python-version: '3.10'
       - uses: actions/cache@main
         id: cache
         with:
@@ -63,7 +63,7 @@ jobs:
         python: [ '3.6', '3.7', '3.8', '3.9', '3.10' ]
         exclude:
           - os: macos-latest
-            python-version: '3.10'
+            python: '3.10'
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-python@main
