--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,10 +38,9 @@ jobs:
     name: test non-spatial conversions
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        python: [ '3.6', '3.7', '3.8', '3.9', '3.10' ]
+        python: [ '3.7', '3.8', '3.9', '3.10' ]
     steps:
       - uses: actions/checkout@main
       - uses: actions/setup-python@main
@@ -61,7 +60,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        python: [ '3.6', '3.7', '3.8', '3.9', '3.10' ]
+        python: [ '3.7', '3.8', '3.9', '3.10' ]
         exclude:
           - os: macos-latest
             python: '3.10'
