--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-python@main
         with:
-          python-version: '3.10'
+          python-version: '3.x'
       - uses: actions/cache@main
         id: cache
         with:
@@ -84,7 +84,7 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-python@main
         with:
-          python-version: '3.10'
+          python-version: '3.x'
       - uses: actions/cache@main
         id: cache
         with:
