update required setuptools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ documentation = 'https://typepigeon.readthedocs.io'
 
 [build-system]
 requires = [
-    'setuptools',
+    'setuptools >=61',
     'setuptools_scm[toml] >=3.4',
     'wheel',
 ]
