--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,7 @@ on:
       - '**.py'
       - '.github/workflows/tests.yml'
       - 'pyproject.toml'
+      - 'tests/**'
   pull_request:
     branches:
       - main
