update build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,20 +6,52 @@ on:
       - published
 
 jobs:
-  publish:
-    name: publish package to PyPI
+  build_wheels:
+    name: build wheel
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        python-version: [ '3.x' ]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+          cache-dependency-path: 'pyproject.toml'
+      - run: pip install wheel
+      - run: pip wheel . -w dist --no-deps
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: ./dist/*.whl
+  build_sdist:
+    name: package source
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-      - uses: actions/setup-python@main
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-      - uses: actions/cache@main
+          cache: 'pip'
+          cache-dependency-path: pyproject.toml
+      - run: pip install build
+      - run: python -m build --sdist .
+      - uses: actions/upload-artifact@v3
         with:
-          path: ${{ env.pythonLocation }}
-          key: build-${{ runner.os }}-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml', 'setup.*') }}
-      - run: pip wheel . --no-deps -w dist
-      - uses: pypa/gh-action-pypi-publish@master
+          name: build
+          path: ./dist/*.tar.gz
+  upload_pypi:
+    name: publish to PyPI
+    needs: [ build_wheels, build_sdist ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+          path: dist
+      - uses: pypa/gh-action-pypi-publish@v1.5.2
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
