--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,12 @@ build-backend = 'setuptools.build_meta'
 
 [tool.pytest.ini_options]
 markers = ['spatial']
+norecursedirs = [
+    'build',
+    '.eggs',
+    'venv',
+    '.tox',
+]
 
 [tool.ruff]
 ignore = ['E501', 'E722']
