--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
-    check-{style}
+    check-{style,build}
     test{,-spatial,-cov}-xdist
-    build-{twine,docs}
+    build-{docs}
 isolated_build = true
 usedevelop = true
 
@@ -13,12 +13,22 @@ deps =
 commands =
     ruff . {posargs}
 
+[testenv:check-build]
+skip_install = true
+deps =
+    build
+    twine
+commands =
+    python -m build {posargs}
+    twine check --strict dist/*
+
 [testenv]
 extras =
     test
     spatial: spatial
-commands =
+commands_pre =
     pip freeze
+commands =
     pytest \
     spatial: -m spatial \
     cov: --cov=. --cov-config=pyproject.toml --cov-report=term-missing --cov-report=xml \
@@ -27,15 +37,6 @@ commands =
     {posargs}
 deps =
     xdist: pytest-xdist
-
-
-[testenv:build-twine]
-deps =
-    twine>=3.3
-    pep517
-commands =
-    python -m pep517.check .
-    twine check --strict {distdir}/*
 
 [testenv:build-docs]
 extras =
