--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,7 @@
 envlist =
     check-{style,build}
     test{,-spatial,-cov}-xdist
-    build-{docs}
-isolated_build = true
-usedevelop = true
+    build-{docs,dist}
 
 [testenv:check-style]
 skip_install = true
@@ -26,6 +24,8 @@ commands =
 extras =
     test
     spatial: spatial
+deps =
+    xdist: pytest-xdist
 commands_pre =
     pip freeze
 commands =
@@ -35,11 +35,15 @@ commands =
     warnings: -W error \
     xdist: -n auto \
     {posargs}
-deps =
-    xdist: pytest-xdist
 
 [testenv:build-docs]
 extras =
     docs
 commands =
     sphinx-build -W docs/source docs/build
+
+[testenv:build-dist]
+deps =
+    build
+commands =
+    python -m build {posargs}
