--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dynamic = ['version']
 [project.optional-dependencies]
 spatial = ['pyproj', 'shapely']
 test = ['pytest', 'pytest-cov', 'pytest-xdist']
-docs = ['dunamai', 'm2r2', 'sphinx', 'sphinx-rtd-theme']
+docs = ['dunamai', 'm2r2', 'sphinx', 'sphinx-rtd-theme', 'tomli; python_version <"3.11"', ]
 
 [project.urls]
 repository = 'https://github.com/zacharyburnett/TypePigeon.git'
